--- a/lib/web/templates/layout/play.html.eex
+++ b/lib/web/templates/layout/play.html.eex
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="<%= color_css_path(@conn, client: true) %>">
   </head>
 
-  <body id="body" data-user-token="<%= @conn |> user_token() %>">
+  <body id="body" data-character-token="<%= @conn |> character_token() %>">
     <%= render @view_module, @view_template, assigns %>
     <script src="<%= static_path(@conn, "/js/vendor.js") %>"></script>
     <script src="<%= static_path(@conn, "/js/play.js") %>"></script>
