Move play time to characters in the admin

--- a/lib/web/templates/admin/character/show.html.eex
+++ b/lib/web/templates/admin/character/show.html.eex
@@ -43,6 +43,11 @@
         <div class="box-body">
           <table class="table">
             <tr>
+              <th>Play Time</th>
+              <td><%= @character.seconds_online |> FormatPlayers.play_time() %></td>
+            </tr>
+
+            <tr>
               <th>Level</th>
               <td><%= @character.save.level %></td>
             </tr>
