Handle sign in and registration from grapevine
- Try to fully register a user, using the name and email from their
  grapevine account
- If that fails, redirect the user to page to finalize registration, set
  a name and optionally an email
- Cannot login (or error) their user by the standard login
- Lock the web click to signed in users and also ones with a character

--- a/lib/web/templates/account/show.html.eex
+++ b/lib/web/templates/account/show.html.eex
@@ -16,30 +16,32 @@
         <% end %>
       </div>
     </div>
-    <div class="row mt-3">
-      <div class="col-md-12">
-        <h3>Change Password</h3>
+    <%= if !provider_login?(@user) do %>
+      <div class="row mt-3">
+        <div class="col-md-12">
+          <h3>Change Password</h3>
 
-        <%= form_tag public_account_path(@conn, :update), [method: :put] do %>
-          <div class="form-group has-feedback">
-            <%= label :user, :current_password, "Current Password" %>
-            <%= text_input :user, :current_password, type: "password", class: "form-control", placeholder: "Current Password" %>
-          </div>
+          <%= form_tag public_account_path(@conn, :update), [method: :put] do %>
+            <div class="form-group has-feedback">
+              <%= label :user, :current_password, "Current Password" %>
+              <%= text_input :user, :current_password, type: "password", class: "form-control", placeholder: "Current Password" %>
+            </div>
 
-          <div class="form-group has-feedback">
-            <%= label :user, :password %>
-            <%= text_input :user, :password, type: "password", class: "form-control", placeholder: "Password" %>
-          </div>
+            <div class="form-group has-feedback">
+              <%= label :user, :password %>
+              <%= text_input :user, :password, type: "password", class: "form-control", placeholder: "Password" %>
+            </div>
 
-          <div class="form-group has-feedback">
-            <%= label :user, :password_confirmation, "Password Confirmation" %>
-            <%= text_input :user, :password_confirmation, type: "password", class: "form-control", placeholder: "Password Confirmation" %>
-          </div>
+            <div class="form-group has-feedback">
+              <%= label :user, :password_confirmation, "Password Confirmation" %>
+              <%= text_input :user, :password_confirmation, type: "password", class: "form-control", placeholder: "Password Confirmation" %>
+            </div>
 
-          <%= submit "Update Password", class: "btn btn-primary btn-block btn-flat" %>
-        <% end %>
+            <%= submit "Update Password", class: "btn btn-primary btn-block btn-flat" %>
+          <% end %>
+        </div>
       </div>
-    </div>
+    <% end %>
   </div>
 
   <div class="col-md-4">
