--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -27,67 +27,7 @@ window.gameConfig = <%= raw(Poison.encode!(game_config(@current_character))) %>
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarsExample09">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item <%= tab_selected(@conn, "who") %>">
-              <%= link("Who's Online", to: public_who_path(@conn, :index), class: "nav-link") %>
-            </li>
-            <li class="nav-item <%= tab_selected(@conn, "classes") %>">
-              <%= link("Classes", to: public_class_path(@conn, :index), class: "nav-link") %>
-            </li>
-            <li class="nav-item <%= tab_selected(@conn, "skills") %>">
-              <%= link("Skills", to: public_skill_path(@conn, :index), class: "nav-link") %>
-            </li>
-            <li class="nav-item <%= tab_selected(@conn, "races") %>">
-              <%= link("Races", to: public_race_path(@conn, :index), class: "nav-link") %>
-            </li>
-            <li class="nav-item <%= tab_selected(@conn, "help") %>">
-              <%= link("Help", to: public_help_path(@conn, :index), class: "nav-link") %>
-            </li>
-
-            <%= if Map.has_key?(@conn.assigns, :user) do %>
-              <li class="nav-item <%= tab_selected(@conn, "chat") %>">
-                <%= link("Chat", to: public_chat_path(@conn, :show), class: "nav-link") %>
-              </li>
-              <li class="nav-item <%= tab_selected(@conn, "account") %>">
-                <%= link(to: public_mail_path(@conn, :index), class: "nav-link") do %>
-                  Account
-                  <%= if (unread_count = Mail.unread_count(@user)) > 0 do %>
-                    <span class="badge badge-info"><%= unread_count %></span>
-                  <% end %>
-                <% end %>
-              </li>
-              <%= if @conn |> is_admin? do %>
-                <li class="nav-item>">
-                  <%= link("Admin", to: dashboard_path(@conn, :index), class: "nav-link") %>
-                </li>
-              <% end %>
-              <li class="nav-item">
-                <%= link("Sign Out", to: public_session_path(@conn, :delete), class: "nav-link", method: "delete") %>
-              </li>
-            <% end %>
-          </ul>
-          <%= if Map.has_key?(@conn.assigns, :user) do %>
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <%= link(@current_character.name, to: "#", class: "nav-link dropdown-toggle", data: [toggle: "dropdown"]) %>
-                <div class="dropdown-menu">
-                  <%= Enum.map(@user.characters, fn character -> %>
-                    <%= link(character.name, to: public_character_path(@conn, :swap, to: character.id), method: :post, class: "dropdown-item #{character_active(@conn, character)}") %>
-                  <% end) %>
-                  <div class="dropdown-divider"></div>
-                  <%= link(to: public_character_path(@conn, :new), class: "dropdown-item") do %>
-                    <i class="fa fa-plus"></i>
-                    New Character
-                  <% end %>
-                </div>
-              </li>
-            </ul>
-            <%= link("Play Now", to: public_play_path(@conn, :show), class: "btn btn-secondary") %>
-          <% else %>
-            <%= link("Sign in", to: public_session_path(@conn, :new), class: "btn btn-secondary") %>
-          <% end %>
-        </div>
+        <%= render("_navbar.html", assigns) %>
       </div>
     </nav>
 
