Update the sign in with grapevine button

--- a/assets/home/css/base.scss
+++ b/assets/home/css/base.scss
@@ -15,6 +15,16 @@ code {
   color: $red;
 }
 
+.btn-grapevine {
+  background-color: #aa74da;
+  color: #fff;
+}
+
+.btn-grapevine:hover {
+  background-color: #BB8FE1;
+  color: #fff;
+}
+
 /**
  * Main Site
  */
