Start on admin roles
Create a role with permissions. Permissions will be used to check if an
admin is allowed to access/perform an action on a resource.

--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -208,6 +208,12 @@
                 <span>Notes</span>
               <% end %>
             </li>
+            <li class="<%= tab_selected(@conn, "roles") %>">
+              <%= link(to: role_path(@conn, :index)) do %>
+                <i class="fa fa-user-secret"></i>
+                <span>Roles</span>
+              <% end %>
+            </li>
             <li class="<%= tab_selected(@conn, "typos") %>">
               <%= link(to: typo_path(@conn, :index)) do %>
                 <i class="fa fa-font"></i>
