import css files into scss

--- a/assets/admin/css/app.scss
+++ b/assets/admin/css/app.scss
@@ -1,5 +1,15 @@
+
+@import "/vendor/bootstrap.css"; 
+@import "/vendor/AdminLTE";
+@import "/vendor/skin-black.css";
+@import "/vendor/skin-black-light.css";
+@import "/vendor/font-awesome.css";
+
 @import "npcs";
 @import "world_map";
+
+
+
 
 .map span.empty {
   display: block;
