--- a/lib/web/templates/admin/user/show.html.eex
+++ b/lib/web/templates/admin/user/show.html.eex
@@ -2,6 +2,16 @@
   <h1>
     <%= @user.name %>
   </h1>
+
+  <ol class="breadcrumb">
+    <li>
+      <%= link(to: dashboard_path(@conn, :index)) do %>
+        <i class="fa fa-dashboard"></i> Home
+      <% end %>
+    </li>
+    <li><%= link("Users", to: user_path(@conn, :index)) %></li>
+    <li class="active"><%= link(@user.name, to: user_path(@conn, :show, @user.id)) %></li>
+  </ol>
 </section>
 
 <section class="content">
