--- a/lib/web/templates/page/index.html.eex
+++ b/lib/web/templates/page/index.html.eex
@@ -12,7 +12,7 @@
       </p>
     <% end %>
 
-    <%= if !Map.has_key?(@conn.assigns, :user) do %>
+    <%= if !Map.has_key?(@conn.assigns, :current_user) do %>
       <p>
         <%= link("Sign in", to: public_session_path(@conn, :new)) %> before playing to start right away. You can also <%= link("create a new account", to: public_registration_path(@conn, :new)) %> to start playing.
       </p>
