--- a/lib/web/templates/account/show.html.eex
+++ b/lib/web/templates/account/show.html.eex
@@ -16,7 +16,7 @@
         <% end %>
       </div>
     </div>
-    <%= if !provider_login?(@user) do %>
+    <%= if !provider_login?(@current_user) do %>
       <div class="row mt-3">
         <div class="col-md-12">
           <h3>Change Password</h3>
@@ -46,7 +46,7 @@
 
   <div class="col-md-4">
     <h3>Two Factor</h3>
-    <%= if !User.totp_verified?(@user) do %>
+    <%= if !User.totp_verified?(@current_user) do %>
       <%= link("Connect a second factor", to: public_account_two_factor_path(@conn, :start), class: "btn btn-primary") %>
     <% else %>
       Second factor is enabled!
