--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -82,6 +82,12 @@
               <% end %>
             </li>
             <li class="header">PLAYERS</li>
+            <li class="<%= tab_selected(@conn, "abilities") %>">
+              <%= link(to: ability_path(@conn, :index)) do %>
+                <i class="fa fa-bullseye"></i>
+                <span>Abilities</span>
+              <% end %>
+            </li>
             <li class="<%= tab_selected(@conn, "classes") %>">
               <%= link(to: class_path(@conn, :index)) do %>
                 <i class="fa fa-user-circle"></i>
