--- a/lib/web/templates/admin/class/show.html.eex
+++ b/lib/web/templates/admin/class/show.html.eex
@@ -44,6 +44,47 @@
     <div class="col-md-12">
       <div class="box">
         <div class="box-header">
+          <h3 class="box-title">Abilities</h3>
+          <div class="box-tools">
+            <%= link("Add Ability", to: class_ability_path(@conn, :new, @class.id), class: "btn btn-primary") %>
+          </div>
+        </div>
+        <div class="box-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Level</th>
+                <th>Name</th>
+                <th>Points</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%= Enum.map @class.class_abilities, fn (class_ability) -> %>
+                <tr>
+                  <td><%= class_ability.level %></td>
+                  <td><%= link(class_ability.ability.name, to: ability_path(@conn, :show, class_ability.ability_id)) %></td>
+                  <td><%= class_ability.points %></td>
+                  <td>
+                    <%= link("View", to: ability_path(@conn, :show, class_ability.ability_id), class: "btn btn-default btn-xs") %>
+                    <%= link("Edit", to: ability_path(@conn, :edit, class_ability.ability_id), class: "btn btn-default btn-xs") %>
+                    <%= link(to: class_ability_path(@conn, :delete, class_ability.id), method: :delete, class: "btn btn-warning btn-xs") do %>
+                      <i class="fa fa-times"></i>
+                    <% end %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
           <h3 class="box-title">Skills</h3>
           <div class="box-tools">
             <%= link("Add Skill", to: class_skill_path(@conn, :new, @class.id), class: "btn btn-primary") %>
